# nexus

./: .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .npmrc  AI_LITERACY_AUDIT_AND_ARCHITECTURE.md  AI_LITERACY_DESIGN_DOCUMENT.md  LICENSE  Launch Nexus (Silent).vbs  Launch Nexus.bat  PLATFORM_STRATEGY.md  README.md  Test413.md  USER_AUTH_GUIDE.md  create-shortcut.ps1  create-shortcut.vbs  create-tables.bat  download-mysql.ps1  ecosystem.config.cjs  git-commit.bat  install-mariadb.ps1  install-mysql.ps1  package-lock.json  package.json  pnpm-lock.yaml  setup-db.bat  test-db.bat  test-server.ps1  test413.mjs  todo.md  tsconfig.json  vite.config.ts
services/pbsp/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
services/pbsp/agent/: config.py  main.py  state.py
services/pbsp/api/: auth.py  main.py  websocket.py
services/pbsp/connectors/: __init__.py  ai_chat_import.py  apple.py  base.py  calendar.py  facebook.py  github.py  gmail.py  google_activity.py  instagram.py  linkedin.py  manager.py  microsoft.py  oauth_handler.py  reddit.py  spotify.py  tiktok.py  twitter.py  youtube.py
services/pbsp/core/: collector.py  domain_classifier.py  schemas.py  sentiment_triggers.py  session_builder.py
services/pbsp/extension/: background.js  content.js  manifest.json  nexus_tracker.js
services/pbsp/ml/: burnout.py  insights.py  learning_style.py  personality.py  recommend.py  sentiment.py
services/pbsp/storage/: database.py  encryption.py  retention.py
services/pbsp/tests/: conftest.py  test_connectors.py  test_markers.py  (+5 more)
(+336 files in other folders)
