[project]
name = "behavioral-signal-processor"
version = "0.1.0"
description = "Personal Behavioral Signal Processor - behavioral intelligence agent for the Nexus learning platform"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    # Desktop Agent (Windows)
    "pynput>=1.7",
    "pywin32>=306",
    "psutil>=5.9",
    "pystray>=0.19",
    "Pillow>=10.0",
    # Storage
    "aiosqlite>=0.20",
    "cryptography>=42.0",
    # ML/NLP
    "transformers>=4.40",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "faiss-cpu>=1.8",
    # HTTP
    "httpx>=0.27",
    "authlib>=1.3",
    # Utilities
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
pbsp-agent = "agent.main:main"
pbsp-api = "api.main:start"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
